# forkd

./: CHANGELOG.md  Cargo.toml  README-zh.md  README.md  registry.json
bench/: BOXLITE.md  CUBESANDBOX.md  OPENSANDBOX.md  README.md  compare-all.py  generate_charts.py
bench/pause-window/: RESULTS-v0.3.md  agent-sweep-ssd.csv  dirtier.py  sweep-agent.sh
crates/forkd-cli/src/: bench.rs  hub.rs  main.rs  sandbox.rs
crates/forkd-controller/src/: api.rs  auth.rs  http.rs  state.rs
crates/forkd-uffd/src/: wp_snapshot.rs
crates/forkd-vmm/: Cargo.toml
crates/forkd-vmm/src/: lib.rs  memfd.rs
docs/: HUB.md  INTEGRATION-BOXLITE.md  ROADMAP.md  SECURITY.md
docs/posts/: 2026-05-19-v0.3-shipped.md
experiments/v0.4-kvm-uffd-wp-poc/src/: main.rs
sdk/python/: pyproject.toml
sdk/python/forkd/: __init__.py
sdk/typescript/: package.json
