[package]
name = "forkd-vmm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
# Vm::request_wp_uffd reuses the SCM_RIGHTS handshake receiver. Linux-only
# because userfaultfd doesn't exist on macOS/Windows.
forkd-uffd = { path = "../forkd-uffd" }
